--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/calendar.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>투두 리스트</title>
+    <meta property="og:title" content="투두리스트" />
+    <meta property="og:description" content="투두리스트 입니다." />
+    <!-- <meta property="og:image" content="/flat-lay-notebook-with-list-desk.jpg" /> -->
   </head>
   <body>
     <div id="root"></div>
